# kk-scene-timeline-info

./: .gitignore  LICENSE  Makefile  README.md  make.bat  pyproject.toml
src/: KKSceneTimelineInfo.bat  config.toml  main.py  make_release.py
src/kk_scene_timeline_info/: __init__.py  scene_manager.py  settings.py  utils.py
