[project]
name = "kk_scene_timeline_info"
version = "0.4.0"
description = "Console executable to add timeline info to a scene's file name"
authors = [
    {name = "AX-MMD",email = "ax.mmd.yt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = ["types-toml (>=0.10.8.20240310,<0.11.0.0)", "toml (>=0.10.2,<0.11.0)", "kk-scene-wrapper (>=0.3.2,<0.4.0)"]


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.release.dependencies]
pyinstaller = "^6.11.1"
cx-freeze = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["I", "F", "E", "W"]
ignore = ["E203", "F811", "E501", "E266"]

[tool.cxfreeze.build_exe]
excludes = [
    "unittest", "email", "http", "tcl", "ssl", "socket", "ftplib", "tkinter",
    "logging", "html", "sqlite3", "asyncio", "pydoc",
    "bz2", "multiprocessing", "concurrent",
]
packages = ["os"]
build_exe = "_dist/bin"
include_msvcr = "True"

[tool.cxfreeze]
executables = [
    {script = "src/main.py", base = "console", target_name = "KKSceneTimelineInfo.exe"}
]